--- a/laravel/public/css/base.css
+++ b/laravel/public/css/base.css
@@ -8,16 +8,22 @@
         padding: 0;
         width: 100%;
         display: table;
-        font-weight: 100;
+        font-weight: bold;
         font-family: 'Lato';
     }
 
-    img {
+/*    img {
         height: 50%;
         width: 50%;
-    }
+    }*/
 
     p {
+        display: line; 
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .font-me {
         display: line; 
         font-weight: bold;
         text-align: center;
@@ -182,13 +188,13 @@
         background:#ccc;
         color:#FFF;
     }
-/*    .rating span:hover ~ span label,
+    .rating span:hover ~ span label,
     .rating span:hover label,
     .rating span.checked label,
     .rating span.checked ~ span label {
         background:#81AAD9;
         color:#FFF;
-    }*/
+    }
 
 
     .unchecked {
@@ -227,4 +233,17 @@
         width: 100%;
         border-radius: 0px;
         margin-bottom: 0px;
+    }
+
+
+    .main-product-image {
+        max-height: 350px;
+    }
+
+    .user-review-image {
+        max-height: 100px;
+    }
+
+    .product-thumb-image {
+        max-height: 170px;
     }
