corrected a js document onload issue and added global modal

--- a/laravel/public/css/base.css
+++ b/laravel/public/css/base.css
@@ -198,3 +198,8 @@
         border-radius: 0px;
         margin-bottom: 0px;
     }
+
+    #globalAlert{
+        padding-top: 5%;
+        text-align: center;
+    }
