--- a/laravel/public/css/base.css
+++ b/laravel/public/css/base.css
@@ -39,6 +39,10 @@
         font-weight: bold;
     }
 
+    p{
+        margin: 0 0 10px 20px;
+    }
+
     table {
         text-align: left;
     }
